--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
         "postcss": "^8.4.18",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-table": "^7.8.0",
         "tailwindcss": "^3.2.1",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "@inertiajs/inertia-react": "^0.8.1"
     },
     "dependencies": {
-        "@inertiajs/inertia-react": "^0.8.1"
     }
 }
